Modulo_4_Kubernates/28_sesion/secure-shop/k8s/03-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: secureshop
spec: 
  replicas: 1
  selector: {matchLabels: {app: postgres}}
  template:
    metadata: {labels: {app: postgres}}
    spec:
      containers:
      - name: db
        image: postgres:16.9-alpine
        volumeMounts:
        - name: data 
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        emptyDir: {}
      securityContext:
        runAsNonRoot: true
        seccompProfile: {type: RuntimeDefault}
